Changed homepage photo, fixed spacing above banner on Seek and Discover

--- a/theme/stylesheets/screen/core.css
+++ b/theme/stylesheets/screen/core.css
@@ -656,7 +656,7 @@ ul#breadcrumbs a {
 .discover #section-header,
 .seek #section-header {
 	height: 75px;
-	margin-top: 18px;
+	margin-top: 40px;
 	margin-left: 18px;
 }
 
